[Win64] Compile fix. https://bugs.webkit.org/show_bug.cgi?id=163384

Reviewed by Brent Fulgham.

Fix use of potentially uninitialized variable.

* dfg/DFGSpeculativeJIT64.cpp:
(JSC::DFG::SpeculativeJIT::compile):


Canonical link: https://commits.webkit.org/181214@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@207289 268f45cc-cd09-0410-ab3c-d52691b4dbfc